[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-hft"
version = "0.1.0"
description = "Quant platform strategy runtime and tooling"
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "quant_platform_HF"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "black>=24.0",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
packages = ["quant_hft"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
